--- a/HTML/linkfile.html
+++ b/HTML/linkfile.html
@@ -6,6 +6,8 @@
     <title>link</title>
 </head>
 <body>
+    <h1>HI THERE!</h1>
+    <h2>click the link below to navigate to a page which contains a image ,table and a link</h2>
     <a href="linkfile2.html
     ">Click here</a>
 </body>
