--- a/HTML/linkfile2.html
+++ b/HTML/linkfile2.html
@@ -7,32 +7,88 @@
 </head>
 <body>
     <br>
-    <h2>BOOK REVIEW</h2>
-    <!-- <reff="https://images-cdn.reedsy.com/discovery/post/38/featured_image/medium_6c600ad41acdc0fb7a419a8fce11c9116993d73a.jpg"></reff> -->
+    <h2 style="text-align: center;">BOOK REVIEW</h2>
+    <h3>To Kill a Mockingbird</h3>
+  
     <p>
         To Kill a Mockingbird is a timeless classic that explores themes of racial injustice, morality, and human compassion. Published in 1960, the novel is set in the racially segregated town of Maycomb, Alabama, during the Great Depression. Through the eyes of Scout Finch, a young girl, Harper Lee crafts a poignant narrative that remains relevant even today.
 
         The story follows Scout, her brother Jem, and their father, Atticus Finch, a principled lawyer who defends Tom Robinson, a Black man falsely accused of assaulting a white woman. Through Scout’s innocent yet insightful perspective, the novel highlights the deep-seated prejudices in society and the courage it takes to stand up for justice.  
     </p>
-    <br>
-    <a href="https://in.search.yahoo.com/search?fr=mcafee&type=E210IN1590G0&p=%3D">To download book </a>
+    <div>
+        <br>
+        <h4>Book link to download</h4>
+        <a href="https://in.search.yahoo.com/search?fr=mcafee&type=E210IN1590G0&p=%3D">To download book </a>
+
+    </div>
+
     <br>
     <img width="700px" src="https://tse1.mm.bing.net/th?id=OIP.UeByFekBWs9mtWBzqBenkQHaE8&pid=Api&P=0&h=180">
 
-   
-    <br>
+
+
+
+    <h3>Main Characters</h3>
     <table border="2">
         <thead>
-            <th>bookname</th>
-            <th>author</th>
-            <th>price</th>
+            <tr>
+                <th>Character</th>
+                <th>Role</th>
+                <th>Traits</th>
+            </tr>
         </thead>
-        <tr>
-            <td>To kill mockingbird</td>
-            <td>Harper Lee</td>
-            <td>299</td>
+        <tbody>
+            <tr>
+                <td>Scout Finch</td>
+                <td>Protagonist and narrator</td>
+                <td>Curious, intelligent, outspoken</td>
+            </tr>
+            <tr>
+                <td>Atticus Finch</td>
+                <td>Scout's father, a lawyer</td>
+                <td>Wise, just, compassionate</td>
+            </tr>
+            <tr>
+                <td>Jem Finch</td>
+                <td>Scout’s older brother</td>
+                <td>Brave, protective, maturing</td>
+            </tr>
+            <tr>
+                <td>Tom Robinson</td>
+                <td>Falsely accused Black man</td>
+                <td>Innocent, kind, victimized</td>
+            </tr>
+            <tr>
+                <td>Boo Radley</td>
+                <td>Reclusive neighbor</td>
+                <td>Mysterious, misunderstood, protective</td>
+            </tr>
+        </tbody>
+    </table>
 
-        </tr>
+    <br>
+    <h3>Book Information</h3>
+    <table border="2">
+        <thead>
+            <tr>
+                <th>Book Name</th>
+                <th>Author</th>
+                <th>Genre</th>
+                <th>Publication Year</th>
+                <th>Price (INR)</th>
+                <th>Rating</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>To Kill a Mockingbird</td>
+                <td>Harper Lee</td>
+                <td>Fiction, Drama</td>
+                <td>1960</td>
+                <td>299</td>
+                <td>4.8/5</td>
+            </tr>
+        </tbody>
     </table>
 
 </body>
