--- a/HTML/form.html
+++ b/HTML/form.html
@@ -29,7 +29,7 @@
     <div>
        
         <label>Enter password:</label>
-        <input type="password" value="..." readonly >
+        <input type="password" placeholder="..." >
 
     </div>
     <br>
