--- a/css/css1.html
+++ b/css/css1.html
@@ -8,7 +8,7 @@
     <!-- external styleSheet linking -->
     <link rel="stylesheet" href="css1.css">
 
-    <!-- internal style -->
+    <!-- internal style css -->
     <style>
         h2 {
             color: blue;
@@ -29,7 +29,7 @@
     <p class="internal-style"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora voluptatibus, quibusdam excepturi adipisci provident ex! Ullam necessitatibus veritatis reprehenderit! Unde voluptatem dolores blanditiis quaerat aliquam aspernatur natus aperiam vel illum.</p>
 
     
-    <!-- external Style Applied -->
+    <!-- external Style  -->
      <h2 class="external-style">EXTERNAL STYLING</h2>
     <p class="external-style">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus quo ipsam ullam soluta minus odio amet architecto consequuntur, hic harum veritatis. Dolores itaque dolor officiis ratione temporibus! Assumenda, fuga itaque?</p>
     
